--- a/.pipelines/templates/package-helm-chart.yaml
+++ b/.pipelines/templates/package-helm-chart.yaml
@@ -1,10 +1,19 @@
+parameters: 
+  - name: releaseTag
+    type: boolean
+    default: false
+
 steps: 
 - script: |
     echo "##vso[task.setvariable variable=UNIQUE_TAG]$(git rev-parse --short HEAD)"
     echo ${UNIQUE_TAG}
   displayName: Create Unique Tag
 - script: |
-    echo "##vso[task.setvariable variable=CHECKOUT_TAG]$(image.tag)-${UNIQUE_TAG}"
+    if [[ {{ parameters.releaseTag }} ]]; then
+      echo "##vso[task.setvariable variable=CHECKOUT_TAG]$(image.tag)-${UNIQUE_TAG}-release"
+    else
+      echo "##vso[task.setvariable variable=CHECKOUT_TAG]$(image.tag)-${UNIQUE_TAG}"
+    fi
     echo ${CHECKOUT_TAG}
   displayName: Create Checkout Tag 
 - bash: | 
