--- a/.pipelines/templates/package-helm-chart.yaml
+++ b/.pipelines/templates/package-helm-chart.yaml
@@ -9,7 +9,7 @@ steps:
     echo ${UNIQUE_TAG}
   displayName: Create Unique Tag
 - script: |
-    if [[ ${{ parameters.releaseTag }} = true ]]; then
+    if [[ ${{ parameters.releaseTag }} == true ]]; then
       echo "##vso[task.setvariable variable=CHECKOUT_TAG]$(image.tag)-${UNIQUE_TAG}-release"
     else
       echo "##vso[task.setvariable variable=CHECKOUT_TAG]$(image.tag)-${UNIQUE_TAG}"
