--- a/.pipelines/templates/package-helm-chart.yaml
+++ b/.pipelines/templates/package-helm-chart.yaml
@@ -9,7 +9,8 @@ steps:
     echo ${UNIQUE_TAG}
   displayName: Create Unique Tag
 - script: |
-    if [[ ${{ parameters.releaseTag }} == true ]]; then
+    echo ${{ parameters.releaseTag }}
+    if [[ "${{ parameters.releaseTag }}" == "true" ]]; then
       echo "##vso[task.setvariable variable=CHECKOUT_TAG]$(image.tag)-${UNIQUE_TAG}-release"
     else
       echo "##vso[task.setvariable variable=CHECKOUT_TAG]$(image.tag)-${UNIQUE_TAG}"
