--- a/.pipelines/templates/package-helm-chart.yaml
+++ b/.pipelines/templates/package-helm-chart.yaml
@@ -10,7 +10,7 @@ steps:
   displayName: Create Unique Tag
 - script: |
     echo ${{ parameters.releaseTag }}
-    if [[ "${{ parameters.releaseTag }}" == "true" ]]; then
+    if [[ "${{ parameters.releaseTag }}" == "True" ]]; then
       echo "##vso[task.setvariable variable=CHECKOUT_TAG]$(image.tag)-${UNIQUE_TAG}-release"
     else
       echo "##vso[task.setvariable variable=CHECKOUT_TAG]$(image.tag)-${UNIQUE_TAG}"
