--- a/.pipelines/templates/run-upstream-e2e.yaml
+++ b/.pipelines/templates/run-upstream-e2e.yaml
@@ -4,6 +4,9 @@ steps:
       git clone -b ${UPSTREAM_BRANCH} $(upstream.repo) $(System.DefaultWorkingDirectory)/osm
     displayName: Checkout $(upstream.repo) @ ${UPSTREAM_BRANCH}
   - bash: |
+      sleep 180
+    displayName: "Add delay before running upstream e2es"
+  - bash: |
       make build-osm 
       go test ./tests/e2e -test.v -ginkgo.v -ginkgo.progress -test.timeout 60m -installType=NoInstall -OsmNamespace=arc-osm-system
     displayName: "Run upstream e2e tests"
