--- a/.pipelines/templates/package-helm-chart.yaml
+++ b/.pipelines/templates/package-helm-chart.yaml
@@ -9,6 +9,7 @@ steps:
     echo ${UNIQUE_TAG}
   displayName: Create Unique Tag
 - script: |
+    # Add "-release" for chart created by release chart.  
     echo ${{ parameters.releaseTag }}
     if [[ "${{ parameters.releaseTag }}" == "True" ]]; then
       echo "##vso[task.setvariable variable=CHECKOUT_TAG]$(image.tag)-${UNIQUE_TAG}-release"
