--- a/.pipelines/templates/aks-setup.yaml
+++ b/.pipelines/templates/aks-setup.yaml
@@ -12,7 +12,8 @@ steps:
           -g ${AZURE_CLUSTER_NAME} \
           -n ${AZURE_CLUSTER_NAME} \
           --enable-managed-identity \
-          --no-ssh-key \
+          --no-ssh-key \ 
+          --kubernetes-version ${k8s.version} \
           > /dev/null 2>&1
 
       az aks get-credentials -n ${AZURE_CLUSTER_NAME} -g ${AZURE_CLUSTER_NAME} -f $(System.DefaultWorkingDirectory)/kubeconfig.json
