--- a/.pipelines/templates/aks-setup.yaml
+++ b/.pipelines/templates/aks-setup.yaml
@@ -13,7 +13,7 @@ steps:
           -n ${AZURE_CLUSTER_NAME} \
           --enable-managed-identity \
           --no-ssh-key \ 
-          --kubernetes-version ${K8S_VERSION} \
+          --kubernetes-version 1.20.2 \
           > /dev/null 2>&1
 
       az aks get-credentials -n ${AZURE_CLUSTER_NAME} -g ${AZURE_CLUSTER_NAME} -f $(System.DefaultWorkingDirectory)/kubeconfig.json
