--- a/.pipelines/templates/package-helm-chart.yaml
+++ b/.pipelines/templates/package-helm-chart.yaml
@@ -1,24 +1,5 @@
-parameters: 
-  - name: releaseTag
-    type: boolean
-    default: false
-
 steps: 
-- script: |
-    echo "##vso[task.setvariable variable=UNIQUE_TAG]$(git rev-parse --short HEAD)"
-    echo ${UNIQUE_TAG}
-  displayName: Create Unique Tag
-- script: |
-    # Add "-release" for chart created by release chart.  
-    echo ${{ parameters.releaseTag }}
-    if [[ "${{ parameters.releaseTag }}" == "True" ]]; then
-      echo "##vso[task.setvariable variable=CHECKOUT_TAG]$(image.tag)-${UNIQUE_TAG}-release"
-    else
-      echo "##vso[task.setvariable variable=CHECKOUT_TAG]$(image.tag)-${UNIQUE_TAG}"
-    fi
-    echo ${CHECKOUT_TAG}
-  displayName: Create Checkout Tag 
 - bash: | 
     helm dependency update $(chart.path)
-    helm package --version ${CHECKOUT_TAG} --destination $(image.dir) $(chart.path) --debug
+    helm package --destination $(image.dir) $(chart.path) --debug
   displayName: Package the helm chart
