--- a/.pipelines/templates/publish-helm-chart.yaml
+++ b/.pipelines/templates/publish-helm-chart.yaml
@@ -12,7 +12,10 @@ steps:
       REGISTRY_NAME: $(REGISTRY_NAME)
   - script: |
       cp $(image.dir)/$(chart.name)-*.tgz .
-
+      FILENAME=$(ls $(chart.name)-*.tgz))
+      TRIM=${FILENAME##$(chart.name)-}
+      echo "##vso[task.setvariable variable=CHART_TAG]$(${FILENAME%%.tgz})
+      echo ${CHART_TAG}
     displayName: Get osm-arc chart version
   - script: |
       echo "##vso[task.setvariable variable=UNIQUE_TAG]$(git rev-parse --short HEAD)"
@@ -22,10 +25,10 @@ steps:
       echo ${{ parameters.releaseTag }}
       if [[ "${{ parameters.releaseTag }}" == "True" ]]; then
         # Add "-release" for chart created by release job.  
-        echo "##vso[task.setvariable variable=CHECKOUT_TAG]$(image.tag)-${UNIQUE_TAG}-release"
+        echo "##vso[task.setvariable variable=CHECKOUT_TAG]${CHART_TAG}-${UNIQUE_TAG}-release"
       else
         # Add "-pr" for chart created by pr job.  
-        echo "##vso[task.setvariable variable=CHECKOUT_TAG]$(image.tag)-${UNIQUE_TAG}-pr"
+        echo "##vso[task.setvariable variable=CHECKOUT_TAG]${CHART_TAG}-${UNIQUE_TAG}-pr"
       fi
       echo ${CHECKOUT_TAG}
     displayName: Create Checkout Tag 
