--- a/.pipelines/templates/publish-helm-chart.yaml
+++ b/.pipelines/templates/publish-helm-chart.yaml
@@ -14,7 +14,7 @@ steps:
       cp $(image.dir)/$(chart.name)-*.tgz .
       FILENAME=$(ls $(chart.name)-*.tgz))
       TRIM=${FILENAME##$(chart.name)-}
-      echo "##vso[task.setvariable variable=CHART_TAG]$(${FILENAME%%.tgz})
+      echo "##vso[task.setvariable variable=CHART_TAG]$(${FILENAME%%.tgz})"
       echo ${CHART_TAG}
     displayName: Get osm-arc chart version
   - script: |
