--- a/.pipelines/templates/publish-helm-chart.yaml
+++ b/.pipelines/templates/publish-helm-chart.yaml
@@ -12,7 +12,7 @@ steps:
       REGISTRY_NAME: $(REGISTRY_NAME)
   - script: |
       cp $(image.dir)/$(chart.name)-*.tgz .
-      FILENAME=$(ls $(chart.name)-*.tgz))
+      FILENAME=$(ls $(chart.name)-*.tgz)
       TRIM=${FILENAME##$(chart.name)-}
       echo "##vso[task.setvariable variable=CHART_TAG]$(${TRIM%%.tgz})"
       echo ${CHART_TAG}
