--- a/.pipelines/templates/publish-helm-chart.yaml
+++ b/.pipelines/templates/publish-helm-chart.yaml
@@ -14,7 +14,7 @@ steps:
       cp $(image.dir)/$(chart.name)-*.tgz .
       FILENAME=$(ls $(chart.name)-*.tgz)
       TRIM=${FILENAME##$(chart.name)-}
-      echo "##vso[task.setvariable variable=CHART_TAG]$(${TRIM%%.tgz})"
+      echo "##vso[task.setvariable variable=CHART_TAG]${TRIM%%.tgz}"
       echo ${CHART_TAG}
     displayName: Get osm-arc chart version
   - script: |
@@ -35,7 +35,7 @@ steps:
   - bash: |
       if [[ -n "${CHECKOUT_TAG}" ]]; then
         echo 'pushing chart'
-        oras push $(REPOSITORY_NAME):${CHECKOUT_TAG} ./$(chart.name)-${CHECKOUT_TAG}.tgz:application/tar+gzip --debug
+        oras push $(REPOSITORY_NAME):${CHECKOUT_TAG} ./$(chart.name).tgz:application/tar+gzip --debug
       else 
         echo "Helm chart was not published to staging ACR because $CHECKOUT_TAG was not set by the pipeline" && exit 1
       fi
